<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayInserirDoentes">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloInserirDoente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:text="@string/registation"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="vertical"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#000000">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewDataAniversario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dataNascimento"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18dp" />

                        <CalendarView
                            android:id="@+id/calendarViewDataAniversario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/textViewGenero"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/sexo"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18dp" />

                        <Spinner
                            android:id="@+id/spinnerResultadoTeste"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-3dp"
                            android:layout_marginLeft="3dp"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:id="@+id/textViewConcelho"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/concelho"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spinnerConcelho"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-3dp"
                            android:layout_marginLeft="3dp"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:id="@+id/textViewDoenteCronico"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/doenteCronico"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spinnerDoenteCronico"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-3dp"
                            android:layout_marginLeft="3dp"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:id="@+id/textViewEstadoAtual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/estado"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spinnerEstadoAtual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-3dp"
                            android:layout_marginLeft="3dp"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:id="@+id/textViewDataEstadoAtual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dataEstadoAtual"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textSize="18dp"  />

                        <CalendarView
                            android:id="@+id/calendarViewDataEstadoAtual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:textColorHint="#000000">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/textInputEditTextLayoutTelemovel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/telemovel"
                                android:inputType="phone"
                                android:textColor="#000000"
                                android:textColorHint="#000000" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonRegistarTeste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="registaDoente"
                    android:text="@string/Button_inserirDoente" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>