<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayInserirTestes">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloInserirTestes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:text="@string/teste"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="376dp"
                android:layout_height="500dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="vertical"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewResultadoTeste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/resultadoTeste"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="18dp" />

                    <Spinner
                        android:id="@+id/spinnerResultadoTeste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="3dp"
                        android:spinnerMode="dialog" />

                    <TextView
                        android:id="@+id/textViewDataTeste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/DataTeste"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="18dp" />

                    <CalendarView
                        android:id="@+id/calendarViewDataTeste"
                        android:layout_width="match_parent"
                        android:layout_height="290dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/buttonRegistarTeste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="registaTeste"
                        android:text="@string/Button_inserirDoente" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>