<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMostrarDoentes">

    <Button
        android:id="@+id/buttonDoente"
        android:layout_width="114dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="inserirDoente"
        android:text="@string/button_inserir_paciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecylerViewDoentes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecylerViewDoentes"
        android:layout_width="382dp"
        android:layout_height="489dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonApagarDoente"
        android:layout_width="106dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/buttun_delete_Patient"
        app:layout_constraintEnd_toStartOf="@+id/buttonDoente"
        app:layout_constraintTop_toBottomOf="@+id/RecylerViewDoentes" />

    <Button
        android:id="@+id/buttonUpdateDoente"
        android:layout_width="117dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/buttun_alterar_doente"
        app:layout_constraintEnd_toStartOf="@+id/buttonApagarDoente"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecylerViewDoentes" />

</androidx.constraintlayout.widget.ConstraintLayout>